[tool.poetry]
name = "siscomex-ncm"
version = "1.0.0"
description = "API access to the NCM (Nomenclatura Comum do Mercosul) by Siscomex"
authors = ["Leonardo Gregianin <leogregianin@gmail.com>"]
packages = [
    { include = "ncm" }
]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
mypy = "^0.950"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
