[tool.poetry]
name = "siscomex-ncm"
version = "1.0.1"
description = "API access to the NCM (Nomenclatura Comum do Mercosul) by Siscomex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/leogregianin/siscomex-ncm"
authors = ["Leonardo Gregianin <leogregianin@gmail.com>"]
packages = [
    { include = "ncm" }
]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ruff = "^0.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
# Mesmas regras que o flake8 usaria por padrão
lint.select = ["E", "F"]
# Ignorar arquivos e diretórios específicos
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "venv",
    "__pycache__",
]
line-length = 88
target-version = "py38"
