[tool.poetry]
name = "siscomex-ncm"
version = "1.0.2"
description = "API access to the NCM (Nomenclatura Comum do Mercosul) by Siscomex"
license = "MIT"
readme = "README.md"
repository = "https://github.com/leogregianin/siscomex-ncm"
authors = ["Leonardo Gregianin <leogregianin@gmail.com>"]
packages = [
    { include = "ncm" }
]

[tool.poetry.dependencies]
python = "^3.8"
urllib3 = "^1.26.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
ruff = "^0.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
lint.select = ["E", "F"]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    "venv",
    "__pycache__",
]
line-length = 88
target-version = "py38"
